--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,7 +142,7 @@ services:
       dockerfile: Dockerfile
       args:
         INVOKEAI_VERSION: v5.3.0
-        BASE_IMAGE: *BASE_IMAGE
+        BASE_IMAGE: pytorch/pytorch:2.4.1-cuda12.4-cudnn9-devel
         # TORCH_VERSION: 2.4.1+cu124
         # INDEX_URL: https://download.pytorch.org/whl/cu124
         # XFORMERS_VERSION: 0.0.28.post1
