--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -85,6 +85,7 @@ services:
       - ./workspace/kohya_ss/dataset/logs:/app/kohya_ss/dataset/logs
       - ./workspace/kohya_ss/dataset/outputs:/app/kohya_ss/dataset/outputs
       - ./workspace/kohya_ss/dataset/regularization:/app/kohya_ss/dataset/regularization
+      - ./workspace/kohya_ss/outputs:/app/kohya_ss/outputs
       - ./workspace/kohya_ss/accelerate.yaml:/ap/kohya_ss/accelerate.yaml
     ports:
       - "3020:7860"
