Update nginx.conf runpod template

--- a/container-template/proxy/nginx.conf
+++ b/container-template/proxy/nginx.conf
@@ -3,10 +3,74 @@ events { worker_connections 2048; }
 http {
     client_max_body_size 1024M;
 
+    # Automatic1111 Stable Diffusion WebUI
+    server {
+        listen 7860;
 
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3010;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # ComfyUI
+    server {
+        listen 8188;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3030;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # Kohya_ss
+    server {
+        listen 7862;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3020;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
     # invokeai
     server {
-        listen 9091;
+        listen 9090;
 
         location / {
             add_header Cache-Control no-cache;
@@ -26,49 +90,123 @@ http {
         }
     }
 
-    # Fast Stable Diffusion + web UI + Comfy UI
+    # open-webui
     server {
-        listen 3001;
-
-        location /ws {
-            proxy_http_version 1.1;
-            proxy_set_header Accept-Encoding gzip;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            add_header Cache-Control no-cache;
-            proxy_set_header Host $host;
-
-            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-	        proxy_set_header   X-Real-IP		$remote_addr;
-            proxy_pass http://localhost:3000;
-        }
-
-        location /queue/join {
-            proxy_http_version 1.1;
-            proxy_set_header Accept-Encoding gzip;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            add_header Cache-Control no-cache;
-            proxy_set_header Host $host;
-
-            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-	        proxy_set_header   X-Real-IP		$remote_addr;
-            proxy_pass http://localhost:3000;
-        }
+        listen 8080;
 
         location / {
             add_header Cache-Control no-cache;
             proxy_pass http://localhost:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Accept-Encoding gzip;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Host $host;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
 
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
 
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
 
+    # fooocus
+    server {
+        listen 7863;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3040;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # sdnext
+    server {
+        listen 7864;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3060;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # swarmui
+    server {
+        listen 7801;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:7801;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # facefusion
+    server {
+        listen 7865;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:3070;
+            proxy_intercept_errors on;
+            error_page 502 =200 @502;
+        }
+
+        location /README.md{
+            root /usr/share/nginx/html;
+        }
+
+        location @502 {
+            add_header Cache-Control no-cache;
+            root /usr/share/nginx/html;
+            rewrite ^(.*)$ /readme.html break;
+        }
+    }
+
+    # audiocraft_plus
+    server {
+        listen 7877;
+
+        location / {
+            add_header Cache-Control no-cache;
+            proxy_pass http://localhost:7877;
             proxy_intercept_errors on;
             error_page 502 =200 @502;
         }
