--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -177,49 +177,12 @@ services:
       - HF_HOME=/app/Fooocus/.cache/huggingface
     #   - PRESET=anime
     #   - PRESET=realistic
-  stable-diffusion-webui-forge:
-    <<: *base_service
-    image: bean980310/stable-diffusion-webui-forge:latest
-    container_name: stable-diffusion-webui-forge
-    volumes:
-      - stable-diffusion-webui-forge:/app/stable-diffusion-webui-forge
-      - ./stable-diffusion-models/models/checkpoints:/app/stable-diffusion-webui-forge/models/Stable-diffusion
-      - ./stable-diffusion-models/models/clip_vision:/app/stable-diffusion-webui-forge/models/clip-interrogator
-      - ./stable-diffusion-models/models/configs:/app/stable-diffusion-webui-forge/configs
-      - ./stable-diffusion-models/models/controlnet:/app/stable-diffusion-webui-forge/models/ControlNet
-      - ./stable-diffusion-models/models/deepbooru:/app/stable-diffusion-webui-forge/models/deepbooru
-      - ./stable-diffusion-models/models/embeddings:/app/stable-diffusion-webui-forge/embeddings
-      - ./stable-diffusion-models/models/facerestore_models/Codeformer:/app/stable-diffusion-webui-forge/models/Codeformer
-      - ./stable-diffusion-models/models/facerestore_models/GFPGAN:/app/stable-diffusion-webui-forge/models/GFPGAN
-      - ./stable-diffusion-models/models/hypernetworks:/app/stable-diffusion-webui-forge/models/hypernetworks
-      - ./stable-diffusion-models/models/karlo:/app/stable-diffusion-webui-forge/models/karlo
-      - ./stable-diffusion-models/models/loras:/app/stable-diffusion-webui-forge/models/Lora
-      - ./stable-diffusion-models/models/sams:/app/stable-diffusion-webui-forge/models/sam
-      - ./stable-diffusion-models/models/ultralytics:/app/stable-diffusion-webui-forge/models/adetailer
-      - ./stable-diffusion-models/models/upscale_models/ESRGAN:/app/stable-diffusion-webui-forge/models/ESRGAN
-      - ./stable-diffusion-models/models/upscale_models/RealESRGAN:/app/stable-diffusion-webui-forge/models/RealESRGAN
-      - ./stable-diffusion-models/models/upscale_models/SwinIR:/app/stable-diffusion-webui-forge/models/SwinIR
-      - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui-forge/models/LDSR
-      - ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui-forge/models/VAE
-      - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui-forge/models/VAE-approx
-      - ./stable-video-diffusion-models/models:/app/stable-diffusion-webui-forge/models/svd
-      - ./stable-zero123-models/models/:/app/stable-diffusion-webui-forge/models/z123
-      - ./workspace/stable-diffusion-webui-forge/.cache/huggingface:/app/stable-diffusion-webui-forge/.cache/huggingface
-      - ./workspace/stable-diffusion-webui-forge/extensions:/app/stable-diffusion-webui-forge/extensions
-      - ./workspace/stable-diffusion-webui-forge/webui-user.sh:/app/stable-diffusion-webui-forge/webui-user.sh
-      - ./workspace/stable-diffusion-webui-forge/config.json:/app/stable-diffusion-webui-forge/config.json
-      - ./workspace/stable-diffusion-webui-forge/ui-config.json:/app/stable-diffusion-webui-forge/ui-config.json
-      - ./outputs/stable-diffusion-webui-forge:/app/stable-diffusion-webui-forge/outputs
-    ports:
-      - "3050:7860"
-    pull_policy: if_not_present
-    environment:
-      - HF_HOME=/app/stable-diffusion-webui-forge/.cache/huggingface
-  # stable-diffusion-webui-forge-legacy:
+  # stable-diffusion-webui-forge:
   #   <<: *base_service
-  #   image: bean980310/stable-diffusion-webui-forge:legacy
-  #   container_name: stable-diffusion-webui-forge-legacy
+  #   image: bean980310/stable-diffusion-webui-forge:latest
+  #   container_name: stable-diffusion-webui-forge
   #   volumes:
+  #     - stable-diffusion-webui-forge:/app/stable-diffusion-webui-forge
   #     - ./stable-diffusion-models/models/checkpoints:/app/stable-diffusion-webui-forge/models/Stable-diffusion
   #     - ./stable-diffusion-models/models/clip_vision:/app/stable-diffusion-webui-forge/models/clip-interrogator
   #     - ./stable-diffusion-models/models/configs:/app/stable-diffusion-webui-forge/configs
@@ -248,10 +211,47 @@ services:
   #     - ./workspace/stable-diffusion-webui-forge/ui-config.json:/app/stable-diffusion-webui-forge/ui-config.json
   #     - ./outputs/stable-diffusion-webui-forge:/app/stable-diffusion-webui-forge/outputs
   #   ports:
-  #     - "3051:7860"
+  #     - "3050:7860"
   #   pull_policy: if_not_present
   #   environment:
   #     - HF_HOME=/app/stable-diffusion-webui-forge/.cache/huggingface
+  # stable-diffusion-webui-reforge:
+  #   <<: *base_service
+  #   image: bean980310/stable-diffusion-webui-reforge:latest
+  #   container_name: stable-diffusion-webui-reforge
+  #   volumes:
+  #     - ./stable-diffusion-models/models/checkpoints:/app/stable-diffusion-webui-reforge/models/Stable-diffusion
+  #     - ./stable-diffusion-models/models/clip_vision:/app/stable-diffusion-webui-reforge/models/clip-interrogator
+  #     - ./stable-diffusion-models/models/configs:/app/stable-diffusion-webui-reforge/configs
+  #     - ./stable-diffusion-models/models/controlnet:/app/stable-diffusion-webui-reforge/models/ControlNet
+  #     - ./stable-diffusion-models/models/deepbooru:/app/stable-diffusion-webui-reforge/models/deepbooru
+  #     - ./stable-diffusion-models/models/embeddings:/app/stable-diffusion-webui-reforge/embeddings
+  #     - ./stable-diffusion-models/models/facerestore_models/Codeformer:/app/stable-diffusion-webui-reforge/models/Codeformer
+  #     - ./stable-diffusion-models/models/facerestore_models/GFPGAN:/app/stable-diffusion-webui-reforge/models/GFPGAN
+  #     - ./stable-diffusion-models/models/hypernetworks:/app/stable-diffusion-webui-reforge/models/hypernetworks
+  #     - ./stable-diffusion-models/models/karlo:/app/stable-diffusion-webui-reforge/models/karlo
+  #     - ./stable-diffusion-models/models/loras:/app/stable-diffusion-webui-reforge/models/Lora
+  #     - ./stable-diffusion-models/models/sams:/app/stable-diffusion-webui-reforge/models/sam
+  #     - ./stable-diffusion-models/models/ultralytics:/app/stable-diffusion-webui-reforge/models/adetailer
+  #     - ./stable-diffusion-models/models/upscale_models/ESRGAN:/app/stable-diffusion-webui-reforge/models/ESRGAN
+  #     - ./stable-diffusion-models/models/upscale_models/RealESRGAN:/app/stable-diffusion-webui-reforge/models/RealESRGAN
+  #     - ./stable-diffusion-models/models/upscale_models/SwinIR:/app/stable-diffusion-webui-reforge/models/SwinIR
+  #     - ./stable-diffusion-models/models/upscale_models/LDSR:/app/stable-diffusion-webui-reforge/models/LDSR
+  #     - ./stable-diffusion-models/models/vae:/app/stable-diffusion-webui-reforge/models/VAE
+  #     - ./stable-diffusion-models/models/vae_approx:/app/stable-diffusion-webui-reforge/models/VAE-approx
+  #     - ./stable-video-diffusion-models/models:/app/stable-diffusion-webui-reforge/models/svd
+  #     - ./stable-zero123-models/models/:/app/stable-diffusion-webui-reforge/models/z123
+  #     - ./workspace/stable-diffusion-webui-reforge/.cache/huggingface:/app/stable-diffusion-webui-reforge/.cache/huggingface
+  #     - ./workspace/stable-diffusion-webui-reforge/extensions:/app/stable-diffusion-webui-reforge/extensions
+  #     - ./workspace/stable-diffusion-webui-reforge/webui-user.sh:/app/stable-diffusion-webui-reforge/webui-user.sh
+  #     - ./workspace/stable-diffusion-webui-reforge/config.json:/app/stable-diffusion-webui-reforge/config.json
+  #     - ./workspace/stable-diffusion-webui-reforge/ui-config.json:/app/stable-diffusion-webui-reforge/ui-config.json
+  #     - ./outputs/stable-diffusion-webui-reforge:/app/stable-diffusion-webui-reforge/outputs
+  #   ports:
+  #     - "3051:7860"
+  #   pull_policy: if_not_present
+  #   environment:
+  #     - HF_HOME=/app/stable-diffusion-webui-reforge/.cache/huggingface
   sdnext:
     <<: *base_service
     image: bean980310/sdnext:latest
@@ -271,23 +271,23 @@ services:
     pull_policy: if_not_present
     environment:
       - HF_HOME=/app/automatic/.cache/huggingface
-  easy-diffusion:
-    <<: *base_service
-    image: bean980310/easy-diffusion:latest
-    container_name: easy-diffusion
-    volumes:
-      - easy-diffusion:/app/easy-diffusion
-      - ./stable-diffusion-models/models:/app/easy-diffusion/models
-      - ./stable-diffusion-models/models/ckeckpoints:/app/easy-diffusion/models/stable-diffusion
-      - ./stable-diffusion-models/models/loras:/app/easy-diffusion/models/lora
-      - ./workspace/easy-diffusion/.cache/huggingface:/app/easy-diffusion/.cache/huggingface
-      - ./workspace/easy-diffusion/config.yaml:/app/easy-diffusion/scripts/config.yaml
-      - ./outputs/easy-diffusion:/app/easy-diffusion/outputs
-    ports:
-      - "9000:9000"
-    pull_policy: if_not_present
-    environment:
-      - HF_HOME=/app/easy-diffusion/.cache/huggingface
+  # easy-diffusion:
+  #   <<: *base_service
+  #   image: bean980310/easy-diffusion:latest
+  #   container_name: easy-diffusion
+  #   volumes:
+  #     - easy-diffusion:/app/easy-diffusion
+  #     - ./stable-diffusion-models/models:/app/easy-diffusion/models
+  #     - ./stable-diffusion-models/models/ckeckpoints:/app/easy-diffusion/models/stable-diffusion
+  #     - ./stable-diffusion-models/models/loras:/app/easy-diffusion/models/lora
+  #     - ./workspace/easy-diffusion/.cache/huggingface:/app/easy-diffusion/.cache/huggingface
+  #     - ./workspace/easy-diffusion/config.yaml:/app/easy-diffusion/scripts/config.yaml
+  #     - ./outputs/easy-diffusion:/app/easy-diffusion/outputs
+  #   ports:
+  #     - "9000:9000"
+  #   pull_policy: if_not_present
+  #   environment:
+  #     - HF_HOME=/app/easy-diffusion/.cache/huggingface
   swarmui:
     <<: *base_service
     image: bean980310/swarmui:latest
@@ -320,33 +320,33 @@ services:
       - HF_HOME=/app/facefusion/.cache/huggingface
       - GRADIO_SERVER_NAME=0.0.0.0
       - GRADIO_SERVER_PORT=7860
-  omost:
-    <<: *base_service
-    image: bean980310/omost:latest
-    container_name: omost
-    volumes:
-      - omost:/app/Omost
-      - ./workspace/Omost/.cache/huggingface/hub:/app/Omost/.cache/huggingface
-    ports:
-      - "3080:8080"
-    pull_policy: if_not_present
-    environment:
-      - HF_HOME=/app/Omost/.cache/huggingface
-  stable-audio-tools:
-    <<: *base_service
-    image: bean980310/stable-audio-tools:latest
-    container_name: stable-audio-tools
-    volumes:
-      - stable-audio-tools:/app/stable-audio-tools
-      - ./stable-audio-models/models:/app/stable-audio-tools/models
-      - ./workspace/stable-audio-models/.cache/huggingface:/app/stable-audio-models/.cache/huggingface
-    ports:
-      - "3090:7860"
-    pull_policy: if_not_present
-    environment:
-      - HF_HOME=/app/stable-audio-models/.cache/huggingface
-      - GRADIO_SERVER_NAME=0.0.0.0
-      - GRADIO_SERVER_PORT=7860
+  # omost:
+  #   <<: *base_service
+  #   image: bean980310/omost:latest
+  #   container_name: omost
+  #   volumes:
+  #     - omost:/app/Omost
+  #     - ./workspace/Omost/.cache/huggingface/hub:/app/Omost/.cache/huggingface
+  #   ports:
+  #     - "3080:8080"
+  #   pull_policy: if_not_present
+  #   environment:
+  #     - HF_HOME=/app/Omost/.cache/huggingface
+  # stable-audio-tools:
+  #   <<: *base_service
+  #   image: bean980310/stable-audio-tools:latest
+  #   container_name: stable-audio-tools
+  #   volumes:
+  #     - stable-audio-tools:/app/stable-audio-tools
+  #     - ./stable-audio-models/models:/app/stable-audio-tools/models
+  #     - ./workspace/stable-audio-models/.cache/huggingface:/app/stable-audio-models/.cache/huggingface
+  #   ports:
+  #     - "3090:7860"
+  #   pull_policy: if_not_present
+  #   environment:
+  #     - HF_HOME=/app/stable-audio-models/.cache/huggingface
+  #     - GRADIO_SERVER_NAME=0.0.0.0
+  #     - GRADIO_SERVER_PORT=7860
   audiocraft_plus:
     <<: *base_service
     image: bean980310/audiocraft-plus:latest
